--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ body {
     font-size: 20px;
     line-height: 28px;
     border: 1px solid transparent;
-    padding: 16px 61px 16px;
+    padding: 14px 42px 14px;
     border-radius: 5px;
     cursor: pointer;
 }
@@ -94,6 +94,14 @@ body {
 }
 
 .idc-wave {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+}
+
+.idc-wave-mobile {
+    display: none;
     position: absolute;
     width: 100%;
     bottom: 0;
@@ -160,7 +168,6 @@ body {
     padding-bottom: 147px;
     max-width: 1280px;
     margin: 0 auto;
-    z-index: 0;
 }
 
 .idc-head__title-wrapper {
@@ -200,6 +207,7 @@ body {
 }
 
 .idc-head .idc-subtitle {
+    max-width: 573px;
     font-size: 30px;
     line-height: 34px;
     text-align: center;
@@ -242,6 +250,41 @@ body {
 }
 
 .idc-head__mobile-wrapper {
+    display: none;
+    position: relative;
+}
+
+.idc-header__paper-1 {
+    left: 87%;
+    top: 42%;
+}
+
+.idc-header__paper-2 {
+    left: 73%;
+    top: 28%;
+}
+
+.idc-header__paper-3 {
+    left: 30%;
+    top: 62%;
+}
+
+.idc-header__paper-4 {
+    left: 10%;
+    top: 58%;
+}
+
+.idc-header__paper-1 img,
+.idc-header__paper-2 img,
+.idc-header__paper-3 img,
+.idc-header__paper-4 img {
+    width: 100%;
+}
+
+.idc-header__paper-1,
+.idc-header__paper-2,
+.idc-header__paper-3,
+.idc-header__paper-4 {
     display: none;
 }
 
@@ -632,6 +675,13 @@ body {
     position: absolute;
     left: -50%;
     bottom: 7px;
+}
+
+.idc-instr__animate-arrow-mobile {
+    position: absolute;
+    left: -50%;
+    bottom: 7px;
+    display: none;
 }
 
 .idc-instr__arrow_start {
@@ -1116,8 +1166,8 @@ body {
 }
 
 .prefooter__paper-2 {
-    left: 75%;
-    top: 20%;
+    left: 80%;
+    top: 10%;
 }
 
 .prefooter__paper-3 {
